--- a/main.less
+++ b/main.less
@@ -11,6 +11,8 @@ html {
   body {
     font-family: 'Montserrat', sans-serif;
     text-transform: lowercase;
+    text-align: center;
+    letter-spacing: 2px;
     background-color: #000;
     #menu {
       position: fixed;
@@ -39,6 +41,20 @@ html {
              overflow: hidden;
         }
     }
+    
+    #contact_form{
+      .row{
+        margin-bottom: -80px;
+      }
+    }
+    
+    #submit_button{
+      border: none;
+      color: #fff;
+      background-color: #000;
+      padding-top:-350px;
+    }
+    
     #header {
         #headerLogo {
           margin-top: 80px;
@@ -48,9 +64,19 @@ html {
         }
     
     #main {
+      .caption{
+         border-radius: 0;
+         background-color: #000;
+         border: none;
+         color: #fff;
+         margin-left: 40%;
+         margin-right: 40%;
+         margin-bottom: 10px;
+      }
       .row {
         margin-top: 100px;
         .categoryBlock {
+          position: center;
           cursor: pointer;
           .btn {
            transition: all .2s ease-in-out; 
@@ -74,6 +100,20 @@ html {
         }
       }
     }
+    
+    #contact_form{
+      .row{
+        margin-bottom: -80px;
+      }
+    }
+    
+    #submit_button{
+      border: none;
+      color: #fff;
+      background-color: #000;
+      padding-top:-350px;
+    }
+    
     #footer { 
       
     }
@@ -108,8 +148,8 @@ html {
   }
 
   .navbar-minimal {
-    width: 60px;    
-    min-height: 60px;
+    width: 40px;    
+    min-height: 40px;
     max-height: 100%;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.8);
@@ -212,7 +252,7 @@ html {
 
   @media (min-width: 768px) {
     .navbar-minimal.open {
-      width: 60px;
+      width: 40px;
     }
     .navbar-minimal.open > .navbar-menu {
       overflow: visible;
@@ -244,10 +284,11 @@ html {
       border-top: 10px solid transparent;
       border-bottom: 10px solid transparent;  
       border-right: 10px solid rgb(0, 0, 0);
-      border-right-color: rgba(0, 0, 0, 0.8);
+      border-right-color: rgba(0, 0, 0, 0);
     }
     .navbar-minimal > .navbar-menu > li > a:hover > .desc {
       left: 60px;
       opacity: 1;
     }
   }
+  
