--- a/main.css
+++ b/main.css
@@ -6778,9 +6778,10 @@ html body #main .caption {
   background-color: #000;
   border: none;
   color: #fff;
+  margin-top: -30px;
   margin-left: 40%;
   margin-right: 40%;
-  margin-bottom: 10px;
+  margin-bottom: 50px;
 }
 html body #main .row {
   margin-top: 100px;
