--- a/main.less
+++ b/main.less
@@ -69,9 +69,10 @@ html {
          background-color: #000;
          border: none;
          color: #fff;
+         margin-top: -30px;
          margin-left: 40%;
          margin-right: 40%;
-         margin-bottom: 10px;
+         margin-bottom: 50px;
       }
       .row {
         margin-top: 100px;
