--- a/main.less
+++ b/main.less
@@ -14,6 +14,7 @@ html {
     text-align: center;
     letter-spacing: 2px;
     background-color: #000;
+     -webkit-font-smoothing: antialiased;
     #menu {
       position: fixed;
       top: 0;
@@ -30,7 +31,7 @@ html {
       }
     }
     #wrapper {
-        height: 1000px;
+        min-height: 600px;
         padding-top: 30px;
         padding-bottom: 30px;
         margin-left: 40px;
@@ -39,6 +40,7 @@ html {
              background-color: #fff;
              height: 100%;
              overflow: hidden;
+             position: relative;
         }
     }
     
@@ -64,15 +66,12 @@ html {
         }
     
     #main {
-      .caption{
+      margin-bottom: 100px;
+      .siteTitle{
          border-radius: 0;
-         background-color: #000;
          border: none;
-         color: #fff;
-         margin-top: -30px;
-         margin-left: 40%;
-         margin-right: 40%;
-         margin-bottom: 50px;
+         color: #000;
+         font-size: 20px;
       }
       .row {
         margin-top: 100px;
@@ -115,8 +114,30 @@ html {
       padding-top:-350px;
     }
     
-    #footer { 
-      
+    #footer.container-fluid{ 
+      background-color:#000;
+      margin-top: 10px;
+       .footerList {
+        li {
+          display: inline-block;
+          color: #fff;
+        }
+        li:after {
+          padding: 0 3px 0 5px;
+          content: '|';
+          color: #fff;
+        }
+        li:last-child:after {
+          content: '';
+          padding: 0;
+        }
+        &.firstList {
+          font-size: 13.22px;
+        }
+        &.secondList{
+          font-size: 8.66px;
+        }
+      }
     }
   }
 }  
