--- a/main.less
+++ b/main.less
@@ -1,4 +1,5 @@
  // Import der BOOTSTRAP Bibilothek
+@import "CSSRESET.css";
 @import "bootstrap-3.3.6/less/bootstrap.less";
 @icon-font-path: "bootstrap-3.3.6/fonts/";
 
@@ -67,11 +68,21 @@ html {
     
     #main {
       margin-bottom: 100px;
-      .siteTitle{
+      .siteTitle , h4{
          border-radius: 0;
          border: none;
          color: #000;
          font-size: 20px;
+         font-weight: 900;
+         letter-spacing: 8px;
+      }
+      &.rezept {
+        p {
+          font-size: 18px;
+        }
+        .row {
+          margin-top: 70px;
+        }        
       }
       .row {
         margin-top: 100px;
@@ -314,3 +325,4 @@ html {
     }
   }
   
+
