--- a/main.less
+++ b/main.less
@@ -146,6 +146,14 @@ html {
           }
         }
       }
+	  div .zutaten p {
+		width:auto;
+		margin-left: auto;
+		margin-right: auto;
+		padding-bottom: 0.7em;
+		border-bottom: 1px silver solid;
+		display: inline-block;
+	  }
     }
     
     #contact_form{
