--- a/main.less
+++ b/main.less
@@ -35,7 +35,7 @@
 html {
   body {
     font-family: 'Montserrat-Light', sans-serif;
-    text-transform: lowercase;
+    text-transform: lowercase !important;
     text-align: center;
     letter-spacing: 2px;
     background-color: #000;
@@ -82,12 +82,6 @@ html {
       }
     }
     
-    #submit_button{
-      border: none;
-      color: #fff;
-      background-color: #000;
-      padding-top:-350px;
-    }
     
     #header {
         #headerLogo {
@@ -147,9 +141,6 @@ html {
         }
       }
 	  div .zutaten p {
-		width:auto;
-		margin-left: auto;
-		margin-right: auto;
 		padding-bottom: 0.7em;
 		border-bottom: 1px silver solid;
 		display: inline-block;
@@ -157,8 +148,8 @@ html {
     }
     
     #contact_form{
-      .row{
-        margin-bottom: -80px;
+      textarea {
+        resize: vertical;
       }
     }
     
@@ -166,7 +157,7 @@ html {
       border: none;
       color: #fff;
       background-color: #000;
-      padding-top:-350px;
+      //padding-top:-350px;
     }
     
     #footer.container-fluid{ 
