--- a/main.less
+++ b/main.less
@@ -110,7 +110,7 @@ html {
         }
         .row {
           margin-top: 70px;
-        }        
+        }
       }
       #dropdownButton{
         max-width: 40px;
@@ -214,9 +214,16 @@ html {
     #wrapper {
       #header {
         #headerLogo {
+          margin-top: 150px;
+          margin-bottom: 110px; 
           img {
-            max-width: 160%;
-            margin-left: -30%;
+            position: absolute;
+            top: -9999px;
+            bottom: -9999px;
+            left: -9999px;
+            right: -9999px;
+            margin: auto;
+            max-width: 200%;
           }  
         }
       }
@@ -265,6 +272,9 @@ html {
         .keinAbstand {
           margin-bottom: 0;
         }
+      }
+      .btn-default {
+        letter-spacing: 3px;
       }
     }
   }
